--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,21 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "^1.12.1",
+    "bootstrap": "^3.3.6",
+    "components-font-awesome": "^4.7.0",
+    "simple-line-icons": "^2.4.1",
+    "bootstrap-switch": "^3.3.2",
+    "respond": "^1.4.2",
+    "bootstrap-hover-dropdown": "^2.2.1",
+    "jquery-slimscroll": "^1.3.8",
+    "blockUI": "https://github.com/malsup/blockui.git",
+    "select2": "https://github.com/select2/select2.git#^4.0.3",
+    "select2-bootstrap-theme": "https://github.com/select2/select2-bootstrap-theme.git#0.1.0-beta.4",
+    "jquery-mask-plugin": "^1.14.10",
+    "bootstrap-validator": "^0.11.9",
+    "jquery-validation": "http://github.com/jzaefferer/jquery-validation.git#1.14.0"
+  }
 }
