--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,6 +58,7 @@ twig:
     strict_variables: '%kernel.debug%'
     form_themes:
         - 'bootstrap_3_layout.html.twig'
+        - "admin/_form/_fields.html.twig"
 
 # Doctrine Configuration
 doctrine:
