--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -57,7 +57,7 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
     form_themes:
-        - 'bootstrap_3_layout.html.twig'
+        - 'admin/_form/_layout.html.twig'
         - "admin/_form/_fields.html.twig"
 
 # Doctrine Configuration
