--- a/bower.json
+++ b/bower.json
@@ -30,5 +30,8 @@
     "bootstrap-validator": "^0.11.9",
     "jquery-validation": "http://github.com/jzaefferer/jquery-validation.git#1.14.0",
     "ExplorerCanvas": "https://github.com/arv/ExplorerCanvas.git"
+  },
+  "resolutions": {
+    "jquery": "~1.12.4"
   }
 }
