config_prod.yml banco de dados

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -20,3 +20,11 @@ monolog:
             level: debug
         console:
             type: console
+
+doctrine:
+    dbal:
+        host: "%env(DATABASE_HOST)%"
+        port: "%env(DATABASE_PORT)%"
+        dbname: "%env(DATABASE_NAME)%"
+        user: "%env(DATABASE_USER)%"
+        password: "%env(DATABASE_PASS)%"
