--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,10 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.2.*",
         "twig/twig": "^1.0||^2.0",
-        "white-october/pagerfanta-bundle": "^1.0"
+        "white-october/pagerfanta-bundle": "^1.0",
+        "ext-mcrypt": "*",
+        "ext-intl": "*",
+        "ext-apcu": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
