--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,9 @@
     "jquery-mask-plugin": "^1.14.10",
     "bootstrap-validator": "^0.11.9",
     "jquery-validation": "http://github.com/jzaefferer/jquery-validation.git#1.14.0",
-    "ExplorerCanvas": "https://github.com/arv/ExplorerCanvas.git"
+    "ExplorerCanvas": "https://github.com/arv/ExplorerCanvas.git",
+    "bootstrap-datetimepicker": "https://github.com/smalot/bootstrap-datetimepicker.git#1.0",
+    "jasny-bootstrap": "3.1.3"
   },
   "resolutions": {
     "jquery": "~1.12.4"
