--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "ext-apcu": "*",
+        "ext-intl": "*",
+        "ext-mcrypt": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.2",
@@ -34,10 +37,8 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
-        "white-october/pagerfanta-bundle": "^1.0",
-        "ext-mcrypt": "*",
-        "ext-intl": "*",
-        "ext-apcu": "*"
+        "vich/uploader-bundle": "^1.5",
+        "white-october/pagerfanta-bundle": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
