--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "jquery-validation": "http://github.com/jzaefferer/jquery-validation.git#1.14.0",
     "ExplorerCanvas": "https://github.com/arv/ExplorerCanvas.git",
     "bootstrap-datetimepicker": "https://github.com/smalot/bootstrap-datetimepicker.git#1.0",
-    "jasny-bootstrap": "3.1.3"
+    "jasny-bootstrap": "3.1.3",
+    "bootstrap-datepicker": "1.5.1"
   },
   "resolutions": {
     "jquery": "~1.12.4"
