--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,6 +67,13 @@ framework:
 twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    date:
+        timezone: America/Sao_Paulo
+        format: d/m/Y
+    number_format:
+        decimals: 2
+        decimal_point: ','
+        thousands_separator: '.'
     form_themes:
         - 'admin/_form/_layout.html.twig'
         - "admin/_form/_fields.html.twig"
