--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ext-apcu": "*",
         "ext-intl": "*",
         "ext-mcrypt": "*",
+        "andersondanilo/cnab_php": "^1.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-cache-bundle": "^1.2",
         "doctrine/doctrine-migrations-bundle": "^1.2",
