--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "doctrine/orm": "^2.5",
         "eduardokum/laravel-boleto": "^0.5.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-snappy-bundle": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "stof/doctrine-extensions-bundle": "^1.2",
