--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "symfony/symfony": "3.3.*",
         "twig/twig": "^1.0||^2.0",
         "vich/uploader-bundle": "^1.5",
-        "white-october/pagerfanta-bundle": "^1.0"
+        "white-october/pagerfanta-bundle": "^1.0",
+        "rctnet/opencnabphp": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
