--- a/src/AdminBundle/Resources/config/services.yml
+++ b/src/AdminBundle/Resources/config/services.yml
@@ -58,6 +58,6 @@ services:
 
     app.admin.bill_remessa.generate:
         class: AdminBundle\EventListener\BillRemessaGenerate
-        arguments: ['@doctrine.orm.default_entity_manager']
+        arguments: ['@doctrine.orm.default_entity_manager', '@app.admin.bill_remessa']
         tags:
             - { name: kernel.event_subscriber }
