--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -6,8 +6,7 @@ parameters:
 
 doctrine:
     dbal:
-        driver: pgsql
-        url: "%env(DATABASE_URL)%"
+        url: "%env(CLEARDB_DATABASE_URL)%"
         #host: "%env(DATABASE_HOST)%"
         #port: "%env(DATABASE_PORT)%"
         #dbname: "%env(DATABASE_NAME)%"
