--- a/bower.json
+++ b/bower.json
@@ -32,7 +32,8 @@
     "ExplorerCanvas": "https://github.com/arv/ExplorerCanvas.git",
     "bootstrap-datetimepicker": "https://github.com/smalot/bootstrap-datetimepicker.git#1.0",
     "jasny-bootstrap": "3.1.3",
-    "bootstrap-datepicker": "1.5.1"
+    "bootstrap-datepicker": "1.5.1",
+    "jquery.inputmask": "https://github.com/RobinHerbots/Inputmask.git#3.3.4"
   },
   "resolutions": {
     "jquery": "~1.12.4"
