--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "bootstrap-datetimepicker": "https://github.com/smalot/bootstrap-datetimepicker.git#1.0",
     "jasny-bootstrap": "3.1.3",
     "bootstrap-datepicker": "1.5.1",
-    "jquery.inputmask": "https://github.com/RobinHerbots/Inputmask.git#3.3.4"
+    "jquery.inputmask": "https://github.com/RobinHerbots/Inputmask.git#3.3.4",
+    "blueimp-file-upload": "https://github.com/blueimp/jQuery-File-Upload.git#^9.18.0"
   },
   "resolutions": {
     "jquery": "~1.12.4"
