--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "doctrine/orm": "^2.5",
         "eduardokum/laravel-boleto": "^0.5.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "jms/serializer-bundle": "^2.0",
         "knplabs/knp-gaufrette-bundle": "^0.4.0",
         "knplabs/knp-snappy-bundle": "^1.4",
         "rctnet/opencnabphp": "dev-master",
