--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -129,6 +129,25 @@ stof_doctrine_extensions:
         default:
             timestampable: true
 
+nelmio_cors:
+    defaults:
+        allow_credentials: false
+        allow_origin: []
+        allow_headers: []
+        allow_methods: []
+        expose_headers: []
+        max_age: 0
+        hosts: []
+        origin_regex: false
+        forced_allow_origin_value: ~
+    paths:
+        "^/api/":
+            allow_credentials: true
+            allow_origin: ["*"]
+            allow_headers: ["Authorization","X-Requested-With","X-Custom-Auth","Content-Type","Accept","Origin"]
+            allow_methods: ["POST", "PUT", "PATCH", "GET", "DELETE", "OPTIONS"]
+            max_age: 3600
+
 vich_uploader:
     db_driver: orm
     storage:   gaufrette
