--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "jms/serializer-bundle": "^2.0",
         "knplabs/knp-gaufrette-bundle": "^0.4.0",
         "knplabs/knp-snappy-bundle": "^1.4",
+        "nelmio/cors-bundle": "^1.5",
         "rctnet/opencnabphp": "dev-master",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
