--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -141,7 +141,7 @@ nelmio_cors:
         origin_regex: false
         forced_allow_origin_value: ~
     paths:
-        "^/api/":
+        "^/apifghfgh/":
             allow_credentials: true
             allow_origin: ["*"]
             allow_headers: ["Authorization","X-Requested-With","X-Custom-Auth","Content-Type","Accept","Origin"]
