site downloads done

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -32,11 +32,13 @@ parameters:
     ### uploads path ###
     upload_cache_path: "%kernel.project_dir%/web/uploads/cache"
     upload_banner_image_path: "%kernel.project_dir%/web/uploads/banner_images"
+    upload_cms_downloads_image_path: "%kernel.project_dir%/web/uploads/cms_downloads_images"
     upload_downloads_file_path: "%kernel.project_dir%/web/uploads/downloads_files"
 
     ### uploads relative path to web ###
     upload_cache_relative_path: "/uploads/cache"
     upload_banner_image_relative_path: "/uploads/banner_images"
+    upload_cms_downloads_image_relative_path: "/uploads/cms_downloads_images"
     upload_downloads_file_relative_path: "/uploads/downloads_files"
 
     ### boletos path ###
@@ -161,6 +163,13 @@ vich_uploader:
             delete_on_update: true
             inject_on_load: true
             namer:  vich_uploader.namer_uniqid
+        cms_downloads_image:
+            uri_prefix: "%upload_cms_downloads_image_relative_path%"
+            upload_destination: cms_downloads_fs
+            delete_on_remove: true
+            delete_on_update: true
+            inject_on_load: true
+            namer:  vich_uploader.namer_uniqid
         downloads_file:
             uri_prefix: "%upload_downloads_file_relative_path%"
             upload_destination: downloads_fs
@@ -193,6 +202,9 @@ knp_gaufrette:
         banner:
             local:
                 directory: "%upload_banner_image_path%"
+        cms_downloads:
+            local:
+                directory: "%upload_cms_downloads_image_path%"
 
     filesystems:
         boletos_fs:
@@ -203,3 +215,5 @@ knp_gaufrette:
             adapter: downloads
         banner_fs:
             adapter: banner
+        cms_downloads_fs:
+            adapter: cms_downloads
