--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -75,7 +75,8 @@ security:
     access_control:
         - { path: "%app.security.admin_regex%/login", role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: "%app.security.admin_regex%/resetting", role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: "%app.security.admin_regex%", role: ROLE_ADMINISTRATION_ACCESS }
+        - { path: "%app.security.admin_regex%", role: ROLE_ADMINISTRATION_ACCESS, requires_channel: '%http_protocol%' }
 
         - { path: "%app.security.site_regex%portal", role: ROLE_USER }
         - { path: "%app.security.site_regex%login", role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: "%app.security.site_regex%", requires_channel: '%http_protocol%' }
