--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -72,10 +72,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-    access_control:        
-        - { path: "%app.security.admin_regex%/login", role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: "%app.security.admin_regex%/resetting", role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: "%app.security.admin_regex%", role: ROLE_ADMINISTRATION_ACCESS }
+    access_control:
 
-        - { path: "%app.security.site_regex%portal", role: ROLE_USER }
-        - { path: "%app.security.site_regex%login", role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: "%app.security.admin_regex%/login", role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: '%http_protocol%' }
+        - { path: "%app.security.admin_regex%/resetting", role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: '%http_protocol%' }
+        - { path: "%app.security.admin_regex%", role: ROLE_ADMINISTRATION_ACCESS, requires_channel: '%http_protocol%' }
+
+        - { path: "%app.security.site_regex%portal", role: ROLE_USER, requires_channel: '%http_protocol%' }
